# LawProcedd

./: main.py  pyproject.toml
src/: gemini.py  laws.py  save_markdown.py  test.py
